# elec-shop

./: .dockerignore  .env.example  .flake8  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yaml
app/: settings.py  urls.py
carts_products/: admin.py  apps.py  config.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
carts_products/migrations/: 0002_initial.py  0003_initial.py
core/api/: filters.py  schemas.py  urls.py
core/api/v1/: base_dto.py  urls.py
core/apps/carts_products/: admin.py  apps.py  config.py  exceptions.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
core/apps/common/: models.py
core/apps/main/: admin.py  apps.py  services.py  urls.py  utils.py  views.py
core/apps/orders/: admin.py  apps.py  config.py  exceptions.py  forms.py  models.py  services.py  urls.py  views.py
core/apps/packet/: admin.py  apps.py  models.py  urls.py  (+3 more)
core/project/: asgi.py  urls.py  wsgi.py
docker_compose/: app.yaml  backup.yaml  postgres.yaml
frontend/templates/: base.html  modal_packet.html
main_favorite/: admin.py  apps.py  models.py  services.py  urls.py  utils.py  views.py
main_favorite/templatetags/: products_tags.py
nginx/: Dockerfile  mime.types  nginx.conf
orders/: admin.py  config.py  exceptions.py  forms.py  models.py  services.py  urls.py  views.py
orders/migrations/: 0001_initial.py
packet/: admin.py  apps.py  models.py  services.py  urls.py  utils.py  views.py
packet/templatetags/: carts_packet.py
static/js/: change_navbar.js  favorite.js  main.js  modal_filter_catalog.js  tab_profile.js
staticfiles/js/: change_navbar.js  favorite.js
templates/: base.html  modal_packet.html
templates/carts_products/: all_opinions.html  cart_product.html  finalize_product.html
templates/main_favorite/: favorites.html  index.html  information.html
templates/notifications/: messages_notifications.html  validation.html
templates/users/: login.html  profile.html  registration.html
users/: config.py  forms.py  models.py  services.py  urls.py  views.py
users/templatetags/: get_orders.py
(+241 files in other folders)
